k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.localdev.me
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: backend.localdev.me
    http:
      paths:
      - backend:
          service:
            name: backend-service
            port:
              number: 8081
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
